<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>41</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.jmockit</groupId>
    <artifactId>jmockit-parent</artifactId>
    <version>1.50.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jmockit-parent</name>
    <description>Parent POM for JMOCKIT</description>

    <modules>
        <module>coverageTests</module>
        <module>main</module>
        <module>samples</module>
    </modules>

    <scm>
        <url>https://github.com/hazendaz/jmockit1</url>
        <connection>scm:git:https://github.com/hazendaz/jmockit1</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>gh-pages-scm</name>
            <url>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>

        <!-- TODO: Remove after parent 41 -->
        <error-prone.version>2.20.0</error-prone.version>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1679577617</project.build.outputTimestamp>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.jmockit.parent</module.name>

        <!-- Prior jmockit version -->
        <jmockit.version>1.50.0</jmockit.version>

        <!-- Surefire Argline -->
        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
    </properties>

    <profiles>
        <profile>
            <id>jdk17on</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar --add-opens java.base/java.lang=ALL-UNNAMED</argLine>

                <!-- Javadoc Release is strict due to maven bug and automatic module naming; it needs extra help, see examples (note: done on jdk 17 only as broken until jdk 13 and not backported) -->
                <javadoc.java.release.version>11</javadoc.java.release.version>
            </properties>
        </profile>
    </profiles>

</project>
